feat: добавляет рендер клеток с атрибутами класса Cell

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -27,7 +27,7 @@ $board-border-width: 1px;
 $cell-black: $main-color;
 $cell-white: $secondary-color;
 // cell size
-$cell-size: 10vw;
+$cell-size: 64px;
 
 /* z-index */
 $z-index-local-nav: 10;
